sidebar.css
body, div {
    padding: 0;
    margin: 0;
    font-size: 12px;
    background: #444;
    font-family: 'Source Sans Pro', sans-serif;
    min-width: 200px;
}

div.wrapper {
    padding-left: 0.3em;
    padding-top: 0.7em;
    padding-bottom: 0.7em;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    padding-right: 1em;
    font-size: 1.1em;
}

div.active {
    background: #333;
}

div.wrapper:hover {
    background: #222;
}

div.wrapper a.button {
    visibility: hidden;
}

div.wrapper:hover a.button {
    visibility: visible;
}

#tab-list div.wrapper:first-child {
    border-top: none;
}

a {
    color: whitesmoke;
    text-decoration: none;
    cursor: pointer;
}

a.tab {
    padding-top: 0.5em;
    margin-right: 0.3em;
    margin-left: 0.2em;
}

a.button {
    padding-top: 0em;
    padding-bottom: 0.1em;
    margin-left: 0.2em;
    margin-right: 0.2em;
    padding-left: 0.3em;
    padding-right: 0.3em;
    border-radius: 3px;
    background-color: #333;
}

a.button:hover {
    color: whitesmoke;
    background-color: #666;
}

a.button.close:hover {
    background-color: firebrick;
}

a.button.reload:hover {
    background-color: green;
}

a.button.right {
    position: absolute;
    z-index: 1;
}

a.button.right.close {
    right: 10px;
}

a.button.right.pin {
    right: 62px;
}

a.button.right.mute {
    right: 43px;
}

a.button.reload.reload {
    right: 26px;
}

a.button.right.drag {
    right: 84px;
}

#top {
    padding-bottom: 1em;
    padding-left: 1.8em;
}

#top a {
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    padding-top: 0.5em;
    padding-bottom: 0.3em;
    padding-left: 0.5em;
    padding-right: 0.5em;
    background-color: #ddd;
    color: #666;
}

#top a:hover {
    color: white;
    background-color: #333;
}

a.sound {
    background-color: grey;
    color: white;
}

a.muted {
    background-color: LightCoral;
    color: white;
}

a.muted.sound {
    background: linear-gradient(to right, LightCoral, grey);
}

a.pin.pinned {
    background-color: LightCoral;
    color: white;
}

a.drag {
  -moz-user-select: none;
  cursor: move;
}

.over {
   border-bottom: 1px solid darkblue;
}

img.icon {
    height: 12px;
    width: 12px;
    padding-right: 2px;
    display: inline-block;
}

